// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple patterns (stderr) 1`] = `""`;

exports[`multiple patterns (stdout) 1`] = `
"directory/file.js
directory/nested-directory/nested-directory-file.js
other-directory/file.js
other-directory/nested-directory/nested-directory-file.js
"
`;

exports[`multiple patterns (write) 1`] = `Array []`;

exports[`multiple patterns with non exists pattern (stderr) 1`] = `""`;

exports[`multiple patterns with non exists pattern (stdout) 1`] = `
"directory/file.js
directory/nested-directory/nested-directory-file.js
"
`;

exports[`multiple patterns with non exists pattern (write) 1`] = `Array []`;

exports[`multiple patterns, throw error and exit with non zero code on non existing files (stderr) 1`] = `
"[error] No matching files. Patterns tried: non-existent.js other-non-existent.js
"
`;

exports[`multiple patterns, throw error and exit with non zero code on non existing files (stdout) 1`] = `""`;

exports[`multiple patterns, throw error and exit with non zero code on non existing files (write) 1`] = `Array []`;

exports[`no errors on empty patterns (stderr) 1`] = `""`;

exports[`no errors on empty patterns (stdout) 1`] = `""`;

exports[`no errors on empty patterns (write) 1`] = `Array []`;
